[package]
name = "ft_ping_tester"
version = "0.1.0"
edition = "2021"
authors = ["m0nt4lb4n0 <davide.delladio@gmail.com>"]
license = "MIT"
default-run = "ft_ping_tester"

[dependencies]
signal-hook = { version = "0.3.17", optional = true }
sudo = { version = "0.6.0", optional = false }
toml = { version = "0.8.19", optional = true }
serde_json = { version = "1.0.127", optional = false }
serde_derive = { version = "1.0.209", optional = true }
serde = { version = "1.0.209", optional = true }
ratatui = { version = "0.27.0", optional = true }
pnet = { version = "0.35.0", optional = true }
itertools = { version = "0.13.0", optional = true }
pnet_packet = { version = "0.35.0", optional = true }

[features]
default = ["ft_ping_tester_deps"]
ft_ping_tester_deps = [
    "itertools",
    "ratatui",
    "serde",
    "serde_derive",
    "toml",

]
interceptor_deps = ["pnet", "pnet_packet"]
pnet_packet = ["dep:pnet_packet"]

[[bin]]
name = "ft_ping_tester"
path = "src/main.rs"
required-features = ["ft_ping_tester_deps"]

[[bin]]
name = "interceptor"
path = "src/interceptor/main.rs"
required-features = ["interceptor_deps"]
