[package]
name = "ft_ping_tester"
version = "0.1.0"
edition = "2021"
authors = ["m0nt4lb4n0 <davide.delladio@gmail.com>"]
license = "MIT"
default-run = "ft_ping_tester"


[dependencies]
sudo = "0.6.0"
toml = "0.8.19"
serde_json = "1.0.127"
serde_derive = "1.0.209"
serde = "1.0.209"
ratatui = "0.27.0"
itertools = "0.13.0"

[[bin]]
name = "ft_ping_tester"
path = "src/main.rs"
